@@ -1,7 +1,7 @@
 org.gradle.jvmargs=-Xmx2048M
 
 group = com.opentext.ia
-version = 6.1.1
+version = 6.2.0
 
 systemProp.sonar.host.url = https://sonarqube.com
 systemProp.sonar.organization = remonsinnema-github
